--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="/css/main.css">
   
-      <link rel="stylesheet" href="/css/palette/catpuccin.css">
+      <link rel="stylesheet" href="/css/palette/default.css">
 
       <script src="/js/main.js"></script>
 
