--- a/public/aristatest/index.html
+++ b/public/aristatest/index.html
@@ -90,10 +90,10 @@ doc4">
 
     </div>
     <h2 id="documents-to-scrape">Documents to scrape</h2>
-<p><a href="https://media.canada.travel/sites/default/files/2018-06/MediaCentre-FunFacts_EN_1.pdf">doc1</a></p>
-<p><a href="https://www.arista.com/assets/data/pdf/user-manual/um-books/DMF-Verified-Scale-Guide.pdf">doc2</a></p>
-<p><a href="https://www.arista.com/assets/data/pdf/AVD-A-Care-TAC-Support-Overview.pdf">doc3</a></p>
-<p><a href="https://www.arista.com/assets/data/pdf/qsg/qsg-books/QS_7800_Modular.pdf">doc4</a></p>
+<p><a href="/documents/doc1.pdf">doc1</a></p>
+<p><a href="/documents/doc2.pdf">doc2</a></p>
+<p><a href="/documents/doc3.pdf">doc3</a></p>
+<p><a href="/documents/doc4.pdf">doc4</a></p>
 
     
     
