--- a/public/bookshelf/index.html
+++ b/public/bookshelf/index.html
@@ -10,14 +10,16 @@
   <meta property="og:site_name" content="Neil Thomas">
   <meta property="og:title" content="Recommended Books">
   <meta property="og:description" content="My digital bookshelf, in no particular order.
-“Thinking, Fast and Slow” by Daniel Kahneman
-“The Pragmatic Programmer” by Andrew Hunt and David Thomas
-“Sapiens: A Brief History of Humankind” by Yuval Noah Harari
-“Gödel, Escher, Bach: An Eternal Golden Braid” by Douglas Hofstadter
-“Designing Data-Intensive Applications” by Martin Kleppmann
-“Atomic Habits” by James Clear
-“The Design of Everyday Things” by Don Norman
-“Algorithms to Live By” by Brian Christian and Tom Griffiths">
+“Introduction to Linear Algebra” by Gilbert Strang
+“Animal Farm” by George Orwell
+“War and Peace” by Leo Tolstoy
+“The Annotated Pride and Prejudice” by Jane Austen
+“The C Programming Language” by Brian Kernighan and Dennis Ritchie
+“The Great Gatsby” by F. Scott Fitzgerald
+“1984” by George Orwell
+“To Kill a Mockingbird” by Harper Lee
+“Brave New World” by Aldous Huxley
+“The Lord of the Rings” by J.R.R. Tolkien">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -97,34 +99,37 @@
 <hr>
 <ul>
 <li>
-<p>&ldquo;Thinking, Fast and Slow&rdquo; by Daniel Kahneman</p>
+<p>&ldquo;Introduction to Linear Algebra&rdquo; by Gilbert Strang</p>
 </li>
 <li>
-<p>&ldquo;The Pragmatic Programmer&rdquo; by Andrew Hunt and David Thomas</p>
+<p>&ldquo;Animal Farm&rdquo; by George Orwell</p>
 </li>
 <li>
-<p>&ldquo;Sapiens: A Brief History of Humankind&rdquo; by Yuval Noah Harari</p>
+<p>&ldquo;War and Peace&rdquo; by Leo Tolstoy</p>
 </li>
 <li>
-<p>&ldquo;Gödel, Escher, Bach: An Eternal Golden Braid&rdquo; by Douglas Hofstadter</p>
+<p>&ldquo;The Annotated Pride and Prejudice&rdquo; by Jane Austen</p>
 </li>
 <li>
-<p>&ldquo;Designing Data-Intensive Applications&rdquo; by Martin Kleppmann</p>
+<p>&ldquo;The C Programming Language&rdquo; by Brian Kernighan and Dennis Ritchie</p>
 </li>
 <li>
-<p>&ldquo;Atomic Habits&rdquo; by James Clear</p>
+<p>&ldquo;The Great Gatsby&rdquo; by F. Scott Fitzgerald</p>
 </li>
 <li>
-<p>&ldquo;The Design of Everyday Things&rdquo; by Don Norman</p>
+<p>&ldquo;1984&rdquo; by George Orwell</p>
 </li>
 <li>
-<p>&ldquo;Algorithms to Live By&rdquo; by Brian Christian and Tom Griffiths</p>
+<p>&ldquo;To Kill a Mockingbird&rdquo; by Harper Lee</p>
 </li>
 <li>
-<p>&ldquo;Deep Work&rdquo; by Cal Newport</p>
+<p>&ldquo;Brave New World&rdquo; by Aldous Huxley</p>
 </li>
 <li>
-<p>&ldquo;The Innovators&rdquo; by Walter Isaacson</p>
+<p>&ldquo;The Lord of the Rings&rdquo; by J.R.R. Tolkien</p>
+</li>
+<li>
+<p>&ldquo;Dune&rdquo; by Frank Herbert</p>
 </li>
 </ul>
 
