remove arista test

--- a/public/aristatest/index.html
+++ b/public/aristatest/index.html
@@ -9,7 +9,7 @@
 <meta property="og:url" content="http://localhost:1313/aristatest/">
   <meta property="og:site_name" content="Neil Thomas">
   <meta property="og:title" content="AristaTest">
-  <meta property="og:description" content="Documents to scrape doc1
+  <meta property="og:description" content="Documents to scrape ver 2 doc1
 doc2
 doc3
 doc4">
@@ -89,7 +89,7 @@ doc4">
   </nav>
 
     </div>
-    <h2 id="documents-to-scrape">Documents to scrape</h2>
+    <h2 id="documents-to-scrape-ver-2">Documents to scrape ver 2</h2>
 <p><a href="/documents/doc1.pdf">doc1</a></p>
 <p><a href="/documents/doc2.pdf">doc2</a></p>
 <p><a href="/documents/doc3.pdf">doc3</a></p>
