new home page part 2

--- a/public/bookshelf/index.html
+++ b/public/bookshelf/index.html
@@ -10,16 +10,16 @@
   <meta property="og:site_name" content="Neil Thomas">
   <meta property="og:title" content="Recommended Books">
   <meta property="og:description" content="My digital bookshelf, in no particular order.
-“Introduction to Linear Algebra” by Gilbert Strang
-“Animal Farm” by George Orwell
-“War and Peace” by Leo Tolstoy
-“The Annotated Pride and Prejudice” by Jane Austen
-“The C Programming Language” by Brian Kernighan and Dennis Ritchie
-“The Great Gatsby” by F. Scott Fitzgerald
-“1984” by George Orwell
-“To Kill a Mockingbird” by Harper Lee
-“Brave New World” by Aldous Huxley
-“The Lord of the Rings” by J.R.R. Tolkien">
+Introduction to Linear Algebra by Gilbert Strang
+Animal Farm by George Orwell
+War and Peace by Leo Tolstoy
+The Annotated Pride and Prejudice by Jane Austen
+The C Programming Language by Brian Kernighan and Dennis Ritchie
+The Great Gatsby by F. Scott Fitzgerald
+1984 by George Orwell
+To Kill a Mockingbird by Harper Lee
+Brave New World by Aldous Huxley
+The Lord of the Rings by J.R.R. Tolkien">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -93,37 +93,40 @@
 <hr>
 <ul>
 <li>
-<p>&ldquo;Introduction to Linear Algebra&rdquo; by Gilbert Strang</p>
+<p><a href="https://www.amazon.com/Introduction-Linear-Algebra-Gilbert-Strang/dp/1733146679/"><u>Introduction to Linear Algebra</u></a> by Gilbert Strang</p>
 </li>
 <li>
-<p>&ldquo;Animal Farm&rdquo; by George Orwell</p>
+<p><a href="https://www.amazon.com/Animal-Farm-George-Orwell/dp/0451526341/"><u>Animal Farm</u></a> by George Orwell</p>
 </li>
 <li>
-<p>&ldquo;War and Peace&rdquo; by Leo Tolstoy</p>
+<p><a href="https://www.amazon.com/War-Peace-Leo-Tolstoy/dp/0140447938/"><u>War and Peace</u></a> by Leo Tolstoy</p>
 </li>
 <li>
-<p>&ldquo;The Annotated Pride and Prejudice&rdquo; by Jane Austen</p>
+<p><a href="https://www.amazon.com/Annotated-Pride-Prejudice-Jane-Austen/dp/0307390786/"><u>The Annotated Pride and Prejudice</u></a> by Jane Austen</p>
 </li>
 <li>
-<p>&ldquo;The C Programming Language&rdquo; by Brian Kernighan and Dennis Ritchie</p>
+<p><a href="https://www.amazon.com/Programming-Language-2nd-Brian-Kernighan/dp/0131103628/"><u>The C Programming Language</u></a> by Brian Kernighan and Dennis Ritchie</p>
 </li>
 <li>
-<p>&ldquo;The Great Gatsby&rdquo; by F. Scott Fitzgerald</p>
+<p><a href="https://www.amazon.com/Great-Gatsby-F-Scott-Fitzgerald/dp/0743273567/"><u>The Great Gatsby</u></a> by F. Scott Fitzgerald</p>
 </li>
 <li>
-<p>&ldquo;1984&rdquo; by George Orwell</p>
+<p><a href="https://www.amazon.com/1984-Signet-Classics-George-Orwell/dp/0451524934/"><u>1984</u></a> by George Orwell</p>
 </li>
 <li>
-<p>&ldquo;To Kill a Mockingbird&rdquo; by Harper Lee</p>
+<p><a href="https://www.amazon.com/Kill-Mockingbird-Harper-Lee/dp/0446310786/"><u>To Kill a Mockingbird</u></a> by Harper Lee</p>
 </li>
 <li>
-<p>&ldquo;Brave New World&rdquo; by Aldous Huxley</p>
+<p><a href="https://www.amazon.com/Brave-New-World-Aldous-Huxley/dp/0060850523/"><u>Brave New World</u></a> by Aldous Huxley</p>
 </li>
 <li>
-<p>&ldquo;The Lord of the Rings&rdquo; by J.R.R. Tolkien</p>
+<p><a href="https://www.amazon.com/Lord-Rings-J-R-R-Tolkien/dp/0544003411/"><u>The Lord of the Rings</u></a> by J.R.R. Tolkien</p>
 </li>
 <li>
-<p>&ldquo;Dune&rdquo; by Frank Herbert</p>
+<p><a href="https://www.amazon.com/Dune-Frank-Herbert/dp/0441172717/"><u>Dune</u></a> by Frank Herbert</p>
+</li>
+<li>
+<p><a href="https://www.amazon.com/Naked-Economics-Undressing-Dismal-Science/dp/0393337642/"><u>Naked Economics: Undressing the Dismal Science</u></a> by Charles Wheelan</p>
 </li>
 </ul>
 
