--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <meta property="og:url" content="http://localhost:1313/">
   <meta property="og:site_name" content="Neil Thomas">
   <meta property="og:title" content="Neil Thomas">
-  <meta property="og:description" content="I am a Electrical Engineering and Computer Science student at UC Berkeley">
+  <meta property="og:description" content="I’m currently pursuing my B.S. in Electrical Engineering and Computer Science with a minor in Pure Mathematics at the UC Berkeley. Currently exploring artificial intelligence, machine learning, software engineering, NLP, algorithms, and high frequency trading.">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -85,7 +85,7 @@
             <h1 class="display-3 text-uppercase lh-sm">Neil Thomas</h1>
             
             <p class="lh-lg">
-                <p>I am a Electrical Engineering and Computer Science student at UC Berkeley</p>
+                <p>I&rsquo;m currently pursuing my B.S. in Electrical Engineering and Computer Science with a minor in Pure Mathematics at the UC Berkeley. Currently exploring artificial intelligence, machine learning, software engineering, NLP, algorithms, and high frequency trading.</p>
 
             </p>
             <div class="social-icons">
