Fix website tab title

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>neil-mono-scroll</title>
+    <title>Neil Thomas</title>
     <meta name="description" content="Personal portfolio" />
     <meta name="author" content="Neil Thomas" />
 
-    <meta property="og:title" content="neil-mono-scroll" />
+    <meta property="og:title" content="Neil Thomas" />
     <meta property="og:description" content="Personal portfolio" />
     <meta property="og:type" content="website" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta name="twitter:card" content="public/favicon.ico" />
   </head>
 
   <body>
