--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="twitter:card" content="public/favicon.ico" />
+    
+    <!-- Google Fonts - Chivo Mono -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
 
   <body>
